# Remote_controlled_video_processing

./: README.md  errata.md  gst-launch_examples.sh  inputselect.py  parsetest.py  testsrc.py
src/py_rtsp_serv/: package.xml  setup.cfg  setup.py
src/py_rtsp_serv/py_rtsp_serv/: server.py
