<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_rtsp_serv</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="peter.stahlstrom@edu.turkuamk.fi">tbtest</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>gir1.2-gstreamer-1.0</depend>
  <depend>gir1.2-gst-rtsp-server-1.0</depend>
  <depend>gir1.2-glib-2.0</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
